--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mock-api-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node server.js"
@@ -10,6 +9,40 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.3"
-  }
+    "chalk": "^5.6.0",
+    "chokidar": "^4.0.3",
+    "colorette": "^2.0.20",
+    "dayjs": "^1.11.13",
+    "dot-prop": "^9.0.0",
+    "es-escape-html": "^0.1.1",
+    "eta": "^3.5.0",
+    "header-range-parser": "^1.1.3",
+    "http-status-emojis": "^2.2.0",
+    "inflection": "^3.0.2",
+    "ipaddr.js": "^2.2.0",
+    "json-server": "^0.17.4",
+    "json5": "^2.2.3",
+    "lowdb": "^7.0.1",
+    "milliparsec": "^4.0.0",
+    "mime": "^4.0.4",
+    "mrmime": "^2.0.1",
+    "negotiator": "^0.6.4",
+    "readdirp": "^4.1.2",
+    "regexparam": "^2.0.2",
+    "sirv": "^2.0.4",
+    "sort-on": "^6.1.0",
+    "steno": "^4.0.2",
+    "totalist": "^3.0.1",
+    "type-fest": "^4.41.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/money-control/mock-api-server.git"
+  },
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/money-control/mock-api-server/issues"
+  },
+  "homepage": "https://github.com/money-control/mock-api-server#readme",
+  "description": ""
 }
